ingress-mediaserver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediaserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik-external
  rules:
  - host: mediaserver.farh.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  overseerr
            port:
              number: 5055
      - path: /lidarr
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              number: 8686
      - path: /sonarr
        pathType: Prefix
        backend:
          service:
            name:  sonarr
            port:
              number: 8989
      - path: /radarr
        pathType: Prefix
        backend:
          service:
            name:  radarr
            port:
              number: 7878
      - path: /prowlarr
        pathType: Prefix
        backend:
          service:
            name:  prowlarr
            port:
              number: 9696
      - path: /autobrr
        pathType: Prefix
        backend:
          service:
            name:  autobrr
            port:
              number: 7474
      - path: /whisparr
        pathType: Prefix
        backend:
          service:
            name:  whisparr
            port:
              number: 6969
      - path: /stats
        pathType: Prefix
        backend:
          service:
            name:  tautulli
            port:
              number: 8181
  tls:
  - hosts:
    - mediaserver.farh.net
    secretName: mediaserver.farh.net
